# blobfox

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  clean.sh  snuggle.toml  svg-default-metadata.xml
automate/: README.md  pyproject.toml
automate-rs/: Cargo.toml
automate-rs/resources/: blobfox.yml  neugeme.yml
automate-rs/src/: decl.rs  emote.rs  main.rs
automate/resources/: blobfox.yml  neugeme.yml
automate/src/: canvas.py  generator.py  main.py  util.py
automate/src/data/: emote.py  object.py  overwrite.py  variantList.py  variants.py
blobfox/: README.md
species/blobamber/: species.toml
species/blobamber/templates/: body-basic.mustache  body-comfy.mustache  body-snuggle.mustache  eyes.mustache  hands.mustache
species/blobarcticfox/: species.toml
species/blobarcticfox/templates/: body-basic.mustache  body-snug.mustache  body-snuggle.mustache
species/blobcat/: species.toml
species/blobcat/templates/: base-extra.mustache  base-snug.mustache  blush.mustache  body-basic.mustache  body-comfy.mustache  body-snug.mustache  body-snuggle.mustache  extra-3c.mustache  extra-snug.mustache  hand-3c.mustache  hand-boop.mustache  hand-knife.mustache  hands-reach.mustache  hands.mustache  mouth-reach.mustache  mouth.mustache  nose-aww.mustache  nose-evil.mustache  nose-snug.mustache  nose.mustache  tail-snug.mustache  tail.mustache  whiskers-snug.mustache  whiskers.mustache
species/blobcat/variants/: snug.mustache  snug_aww.mustache
species/blobfox/: species.toml
species/blobfox/templates/: base-owo.mustache  base-snug.mustache  base.mustache  blush.mustache  body-basic.mustache  body-comfy.mustache  body-snug.mustache  body-snuggle.mustache  body.mustache  coffee.mustache  crowbar.mustache  extra-3c.mustache  extra-base.mustache  extra-reach.mustache  extra-snug.mustache  eyes-aww.mustache  eyes-evil.mustache  eyes-owo.mustache  eyes-snug.mustache  eyes.mustache  footer.mustache  hand-3c.mustache  hand-boop.mustache  hand-knife.mustache  (+14 more)
species/blobhusky/: species.toml
species/blobstella/: species.toml
src/: export.rs  lib.rs  main.rs  parse.rs  template.rs
(+40 files in other folders)
