[package]
name = "blobfox-template"
version = "0.1.0"
edition = "2021"
default-run = "blobfox-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
toml = "0.5.9"
# Original repo is abandonned :(
# TODO: switch back to the official crate once https://github.com/eminence/xmltree-rs/pull/33 is merged
# xmltree = "0.10.3"
xmltree = { git = "https://github.com/MFEK/xmltree.rlib" }
mustache = { git = "https://git.shadamethyst.xyz/adri326/rust-mustache.git" }
clap = { version = "3.2", features = ["derive"] }
mkdirp = "1.0.0"
resvg = "0.23"
usvg = "0.23"
tiny-skia = "0.6"
png = "0.17"
css-color-parser = "0.1.2"
